k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ta-table
  namespace: temp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - ta-table.connectiqa.app
      secretName: ta-table-tls
  rules:
    - host: ta-table.connectiqa.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ta-table
                port:
                  number: 80
